force-app/main/default/objects/ddcAssess__Matched_Record__c/ddcAssess__Matched_Record__c.object-meta.xml
<CustomObject>
    <label>Matched Record</label>
    <nameField>
        <label>Data.com Record ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Matched Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>