force-app/main/default/objects/ddcAssess__Matched_Record__c/fields/ddcAssess__Assessment_Summary__c.field-meta.xml
<CustomField>
    <fullName>ddcAssess__Assessment_Summary__c</fullName>
    <label>Assessment Summary</label>
    <referenceTo>ddcAssess__Assessment_Summary__c</referenceTo>
    <relationshipLabel>Matched Records</relationshipLabel>
    <relationshipName>Matched_Records</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>