force-app/main/default/objects/ddcAssess__Matched_Record__c/fields/ddcAssess__Count__c.field-meta.xml
<CustomField>
    <fullName>ddcAssess__Count__c</fullName>
    <inlineHelpText>How many times has this unique ID come up</inlineHelpText>
    <label>Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>