force-app/main/default/objects/ddcAssess__Matched_Record__c/fields/ddcAssess__Dupes__c.field-meta.xml
<CustomField>
    <fullName>ddcAssess__Dupes__c</fullName>
    <formula>IF((ddcAssess__Count__c - 1) &gt; 0, ddcAssess__Count__c - 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dupes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>